--- a/tabibee.html
+++ b/tabibee.html
@@ -28,7 +28,7 @@
         <div id="container" class="container">
             <h1>Exclusive<BR> <span class="change"> T shirt</span></h1>
             <a href="#section1" id="started" class="started">Get Started</a>
-            <a href="#"><img src="Artboard 1.png" alt=""></a>
+            <a><img src="Artboard 1.png" alt=""></a>
         </div>
     </section>
     <section id="section1">
@@ -103,8 +103,8 @@
         <a href="https://www.facebook.com/Tabibeegaming"><i class="fa-brands fa-facebook fb"></i></a>
         <a href="https://www.tiktok.com/@tabibeegaming"><i class="fa-brands fa-tiktok tt"></i></a>
         <a href="https://www.youtube.com/channel/UCCevkYd9KxuCAZpktzj6B2g"><i class="fa-brands fa-youtube yt"></i></a>
-    </section>
     </footer>
+    </section>
     <script src="tabibee.js"></script>
     </main>
 </body>
