--- a/tabibee.html
+++ b/tabibee.html
@@ -12,12 +12,12 @@
 <body>
     <main>
     <section id="section0">
-        <!-- <div id="kantot" class="custom-shape-divider-top-1674126850">
+        <div id="kantot" class="custom-shape-divider-top-1674126850">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                 <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
             </svg>
-        </div> -->
-        <div>
+        </div>
+        <!-- <div>
             <h1 class="inputs" id="light" onclick="lights()">Click Me to Light Mode</h1>
             <h1 class="inputss" id="ilaw" onclick="ilaws()">Click Me to Dark Mode</h1>
             <a class="tt" id="tt" href="#section2">T-shirt</a>
@@ -103,7 +103,7 @@
         <a href="https://www.facebook.com/Tabibeegaming"><i class="fa-brands fa-facebook fb"></i></a>
         <a href="https://www.tiktok.com/@tabibeegaming"><i class="fa-brands fa-tiktok tt"></i></a>
         <a href="https://www.youtube.com/channel/UCCevkYd9KxuCAZpktzj6B2g"><i class="fa-brands fa-youtube yt"></i></a>
-    </footer>
+    </footer> -->
     <script src="tabibee.js"></script>
     </main>
 </body>
