--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 class="inputss" id="ilaw" onclick="ilaws()">Click Me to Dark Mode</h1>
             <a class="tt" id="tt" href="#section2">T-shirt</a>
             <a class="design" id="design" href="#section1">Prints</a>
-            <a class="contact" id="contact" href="#section3">Contact Us</a>
+            <a class="contact" id="contact" href="#section3">About Us</a>
             <a href="https://www.facebook.com/Tabibeegaming"><i id="tabibee" class="fa-solid fa-message"></i></a>
         </div>
         <div id="container" class="container">
@@ -54,31 +54,40 @@
             <img id="img6" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
             <img id="img7" class="img7" src="Blood5.png" alt="">
             <img id="img8" class="img8" src="Puno sa damit.png" alt="">
+            <img id="img9" class="img9" src="Etst.png" alt="">
         </div>
     </section>
     <section id="section3">
         <hr class="lined">
         <div class="likod">
             <div class="sulat">
-                <h1 class="head">About Us</h1>
+                <h1 class="head">About Us <img class="art" src="Artboard 1.png" alt=""></h1>
                 <hr >
                 <p id="sulat">This is the "<span>Exclusive T-Shirt</span>" website i am <span>TABIBEE ALVAREZ</span><br>
-                    and i have a business partner and he is <span>LJ CLAUD</span> and we<br>
-                    decided to create a small business which is the designer<br>
+                    and i have a business partner and he is <span>LJ CLAUD</span> and <br> <span>Patricia</span> we
+                    decided to create a small business which is the designer
                 <span>T shirt design, Logo's, Poster</span>, etc... And we decided to start our
                     business on <span>January 19 2023</span>, 2022 palang nag babalak na kame gumawa
-                    you can support us to sharing our post, likes. <br>
+                    you can support us to sharing our post, likes.
                     A side to photo editing you can hire me as your video editor
                     you can see my edit <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
                     Reminder ang presyo ng design ay naka depende sa ipapagawa mong design.
                 </p><br><br>
                 <a class="tshirt omsim" href="#section2">T shirt</a>
-                <a class="desenyo omsim" href="#section1">Design</a>
+                <a class="desenyo omsim" href="#section1">Prints</a>
             </div>
             <div id="bg" class="bg">
                 <div class="letter">
                    <a href="https://www.facebook.com/Tabibeegaming"> <p>Send Message</p></a>
                    <a href="#kantot"><img src="Artboard 1.png" alt=""></a>
+                </div>
+                <div class="qualification">
+                    <div id="infota" class="info"><br>
+                        <h1>What can we do?</h1><br>
+                        <h1>Graphic Design</h1>
+                        <h1>Video Editing</h1>
+                        <h1>Web Design</h1>
+                    </div>
                 </div>
             </div>
         </div>
