--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 class="inputs" id="light" onclick="lights()">Click Me to Light Mode</h1>
             <h1 class="inputss" id="ilaw" onclick="ilaws()">Click Me to Dark Mode</h1>
             <a class="tt" id="tt" href="#section2">T-shirt</a>
-            <a class="design" id="design" href="#section1">Prints</a>
+            <a class="design" id="design" href="#section1">Prints / Lay Outs</a>
             <a class="contact" id="contact" href="#section3">About Us</a>
             <a href="https://www.facebook.com/Tabibeegaming"><i id="tabibee" class="fa-solid fa-message"></i></a>
         </div>
@@ -37,7 +37,7 @@
                 <h1 id="welcome" class="welcome">ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ ᴇxᴄʟᴜꜱɪᴠᴇ ᴛ ꜱʜɪʀᴛ ᴡᴇʙꜱɪᴛᴇ</h1>
             </div>
             <div>
-                <h1 id="prits" class="prints">Prints / Business</h1>
+                <h1 id="prits" class="prints">Prints / Lay Outs</h1>
                 <a href="https://i.ibb.co/Hn3sb8v/ASTRONAUT.png"><img id="bs" class="img1" src="ASTRONAUT.png" alt=""></a>
                 <a href="https://i.ibb.co/pWSm0w7/CarShow.png"><img id="bss" class="img2" src="CarShow.png" alt=""></a>
                 <a href="https://i.ibb.co/qJGWMJ4/PubG.png"><img id="bsss" class="img3" src="PubG.png" alt=""></a>
@@ -74,7 +74,7 @@
                     Reminder ang presyo ng design ay naka depende sa ipapagawa mong design.
                 </p><br><br>
                 <a class="tshirt omsim" href="#section2">T shirt</a>
-                <a class="desenyo omsim" href="#section1">Prints</a>
+                <a class="desenyo omsim" href="#section1">Prints / Lay Outs</a>
             </div>
             <div id="bg" class="bg">
                 <div class="letter">
