--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 class="inputs" id="light" onclick="lights()">Click Me to Light Mode</h1>
             <h1 class="inputss" id="ilaw" onclick="ilaws()">Click Me to Dark Mode</h1>
             <a class="tt" id="tt" href="#section2">T-shirt</a>
-            <a class="design" id="design" href="#section1">Prints / Lay Outs</a>
+            <a class="design" id="design" href="#section1">Prints</a>
             <a class="contact" id="contact" href="#section3">About Us</a>
             <a href="https://www.facebook.com/Tabibeegaming"><i id="tabibee" class="fa-solid fa-message"></i></a>
         </div>
