--- a/tabibee.html
+++ b/tabibee.html
@@ -69,7 +69,7 @@
                     business on <span>January 19 2023</span>, 2022 palang nag babalak na kame gumawa
                     you can support us to sharing our post, likes. <br>
                     A side to photo editing you can hire me as your video editor
-                    you can see my edit <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
+                    you can see my edit <a class="here" href="https://www.facebook.com/tabibeerada"><span>HERE</span></a><br><br>
                     Reminder ang presyo ng design ay naka depende sa ipapagawa mong design.
                 </p><br><br>
                 <a class="tshirt omsim" href="#section2">T shirt</a>
@@ -77,7 +77,7 @@
             </div>
             <div id="bg" class="bg">
                 <div class="letter">
-                   <a href="https://www.facebook.com/Tabibeegaming"> <p>Send Message</p></a>
+                   <a href="https://www.facebook.com/tabibeerada"> <p>Send Message</p></a>
                    <a href="#kantot"><img src="Artboard 1.png" alt=""></a>
                 </div>
             </div>
@@ -100,7 +100,7 @@
         </div>
         <h1 class="copyright"> ©Tabibee Alvarez Developer All Right Reserved.</h1>
         <h1 class="you">YOᑌ ᑕᗩᑎ ᖇEᗩᑕᕼ ᗰE OᑌT ᕼEᖇE</h1>
-        <a href="https://www.facebook.com/Tabibeegaming"><i class="fa-brands fa-facebook fb"></i></a>
+        <a href="https://www.facebook.com/tabibeerada"><i class="fa-brands fa-facebook fb"></i></a>
         <a href="https://www.tiktok.com/@tabibeegaming"><i class="fa-brands fa-tiktok tt"></i></a>
         <a href="https://www.youtube.com/channel/UCCevkYd9KxuCAZpktzj6B2g"><i class="fa-brands fa-youtube yt"></i></a>
     </footer>
