--- a/tabibee.html
+++ b/tabibee.html
@@ -69,7 +69,7 @@
                     business on <span>January 19 2023</span>, 2022 palang nag babalak na kame gumawa
                     you can support us to sharing our post, likes. <br>
                     A side to photo editing you can hire me as your video editor
-                    you can see my edit <a class="here" href="https://www.facebook.com/tabibeerada"><span>HERE</span></a><br><br>
+                    you can see my edit <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
                     Reminder ang presyo ng design ay naka depende sa ipapagawa mong design.
                 </p><br><br>
                 <a class="tshirt omsim" href="#section2">T shirt</a>
