--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
-    <main>
+    <main id="main1">
     <section id="section0">
         <div id="kantot" class="custom-shape-divider-top-1674126850">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -21,7 +21,7 @@
             <h1 class="inputs" id="light" onclick="lights()">Click Me to Light Mode</h1>
             <h1 class="inputss" id="ilaw" onclick="ilaws()">Click Me to Dark Mode</h1>
             <a class="tt" id="tt" href="#section2">T-shirt</a>
-            <a class="design" id="design" href="#section1">Prints</a>
+            <a class="design" id="design" href="#section1">Lay Outs</a>
             <a class="contact" id="contact" href="#section3">About Us</a>
             <a href="https://www.facebook.com/Tabibeegaming"><i id="tabibee" class="fa-solid fa-message"></i></a>
         </div>
@@ -74,7 +74,7 @@
                     Reminder ang presyo ng design ay naka depende sa ipapagawa mong design.
                 </p><br><br>
                 <a class="tshirt omsim" href="#section2">T shirt</a>
-                <a class="desenyo omsim" href="#section1">Prints / Lay Outs</a>
+                <a class="desenyo omsim" href="#section1">Lay Outs</a>
             </div>
             <div id="bg" class="bg">
                 <div class="letter">
@@ -113,7 +113,83 @@
         <a href="https://www.tiktok.com/@tabibeegaming"><i class="fa-brands fa-tiktok tt"></i></a>
         <a href="https://www.youtube.com/channel/UCCevkYd9KxuCAZpktzj6B2g"><i class="fa-brands fa-youtube yt"></i></a>
     </footer>
-    <script src="tabibee.js"></script>
     </main>
+
+    <!--      FOR CELLPHONE         -->
+    <main id="main2">
+    <section id="cell-phone" class="cell-phone">
+        <div class="custom-shape-divider-top-1674724246">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+                <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+                <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+            </svg>
+        </div>
+        <div class="main">
+            <div id="inside" class="main-inside">
+                <img class="board1" src="Artboard 1.png" alt="">
+                <a class="contact1" href="#tungkol">Contact</a>
+                <a class="tshirts1" href="#pangatlo">T shirt</a>
+                <a class="designs1" href="#second">Design / Lay Outs</a>
+                <i id="onn" onclick="on()" class="fa-solid fa-sun"></i>
+                <i id="offf" onclick="off()" class="fa-solid fa-moon"></i>
+            </div>
+        </div>
+    </section>
+    <section class="second line" id="second">
+        <div>
+            <h1 id="welcomee" class="welcome">ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ ᴇxᴄʟᴜꜱɪᴠᴇ ᴛ ꜱʜɪʀᴛ ᴡᴇʙꜱɪᴛᴇ</h1>
+        </div>
+        <div>
+            <h1 id="printer" class="prints">Prints / Lay Outs</h1>
+            <a href="https://i.ibb.co/Hn3sb8v/ASTRONAUT.png"><img id="sb" class="img1" src="ASTRONAUT.png" alt=""></a>
+            <a href="https://i.ibb.co/pWSm0w7/CarShow.png"><img id="ssb" class="img2" src="CarShow.png" alt=""></a>
+            <a href="https://i.ibb.co/qJGWMJ4/PubG.png"><img id="sssb" class="img3" src="PubG.png" alt=""></a>
+            <a href="https://i.ibb.co/TgCJmTr/Puno.png"><img id="ssssb" class="img4" src="Puno.png" alt=""></a><br>
+            <a href="https://i.ibb.co/8z9mRzp/to-the-moon.png"><img id="sssssb" class="img5" src="to the moon.png" alt=""></a>
+            <a href="https://i.ibb.co/WnR8DhX/MILK-TEA.png"><img id="ssssssb" class="img55" src="MILK TEA.png" alt=""></a>
+            <a href="https://i.ibb.co/JFDzv5f/Tabibee-Gaming-banner.png"><img id="sssssssb" class="img56" src="Tabibee Gaming banner.png" alt=""></a>
+        </div>
+    </section>
+    <section id="pangatlo">
+        <div>
+            <h1 id="tshirt" class="T shirTE">T-Shirt</h1><br>
+            <img id="img66" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
+            <img id="img77" class="img7" src="Blood5.png" alt="">
+            <img id="img88" class="img8" src="Puno sa damit.png" alt="">
+            <img id="img99" class="img9" src="Etst.png" alt="">
+        </div>
+    </section>
+    <section id="tungkol">
+        <div class="likod">
+            <div class="sulat">
+                <h1 class="head">About Us <img class="art" src="Artboard 1.png" alt=""></h1>
+                <hr >
+                <p id="sulat">This is the "<span>Exclusive T-Shirt</span>" website i am <span>TABIBEE ALVAREZ</span><br>
+                    and i have a business partner and he is <span>LJ CLAUD</span> and <br> <span>Patricia</span> we
+                    decided to create a small business which is the designer
+                <span>T shirt design, Logo's, Poster</span>, etc... And we decided to start our
+                    business on <span>January 19 2023</span>, 2022 palang nag babalak na kame gumawa
+                    you can support us to sharing our post, likes.
+                    A side to photo editing you can hire me as your video editor
+                    you can see my edit <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
+                    Reminder ang presyo ng design ay naka depende sa ipapagawa mong design.
+                </p><br><br>
+                <a class="tshirt omsim shirtt" href="#pangatlo">T shirt</a>
+                <a class="desenyo omsim senyo" href="#second">Lay Outs</a>
+            </div>
+        </div>
+    </section>
+    <footer id="paa-foot">
+        <img src="Artboard 1.png" alt="">
+        <p>©Tabibee Alvarez Developer All Right Reserved</p>
+        <a href="https://www.facebook.com/Tabibeegaming"><i class="fa-brands fa-facebook fb"></i></a>
+        <a href="https://www.tiktok.com/@tabibeegaming"><i class="fa-brands fa-tiktok tt"></i></a>
+        <a href="https://www.youtube.com/channel/UCCevkYd9KxuCAZpktzj6B2g"><i class="fa-brands fa-youtube yt"></i></a>
+        <hr class="line">
+        
+    </footer>
+</main>
+    <script src="tabibee.js"></script>
 </body>
 </html>
