--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div>
             <h1 id="tshirt" class="T">T-Shirt</h1><br>
             <img id="img6" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
-            <img id="img7" class="img7" src="Blood5.png" alt="">
-            <img id="img8" class="img8" src="Puno sa damit.png" alt="">
+            <img id="img7" class="img7" src="Genggeng.png" alt="">
+            <img id="img8" class="img8" src="Glitch.png" alt="">
             <img id="img9" class="img9" src="Etst.png" alt="">
         </div>
     </section>
