--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         <div>
             <h1 id="tshirt" class="T shirTE">T-Shirt</h1><br>
             <img id="img66" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
-            <img id="img77" class="img7" src="Blood5.png" alt="">
-            <img id="img88" class="img8" src="Puno sa damit.png" alt="">
+            <img id="img77" class="img7" src="Genggeng.png" alt="">
+            <img id="img88" class="img8" src="Glitch.png" alt="">
             <img id="img99" class="img9" src="Etst.png" alt="">
         </div>
     </section>
