--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exclusive Tshirt</title>
+    <title>Exclusive Tshirt / HOME</title>
     <link rel="stylesheet" href="tabibee.css">
     <link rel="shortcut icon" href="Artboard 1.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -52,9 +52,10 @@
         <div>
             <h1 id="tshirt" class="T">T-Shirt</h1><br>
             <img id="img6" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
-            <img id="img7" class="img7" src="Genggeng.png" alt="">
+            <img id="img7" class="img7" src="One Piece Luffy.png" alt="">
             <img id="img8" class="img8" src="Glitch.png" alt="">
             <img id="img9" class="img9" src="Etst.png" alt="">
+            <a href="pictures.html"><h1 class="seemore">See more..</h1></a>
         </div>
     </section>
     <section id="section3">
@@ -69,9 +70,8 @@
                 <span>T shirt design, Logo's, Poster</span>, etc... And we decided to start our
                     business on <span>January 19 2023</span>, 2022 palang nag babalak na kame gumawa
                     you can support us to sharing our post, likes.
-                    A side to photo editing you can hire me as your video editor
-                    you can see my edit <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
-                    Reminder ang presyo ng design ay naka depende sa ipapagawa mong design.
+                    for the price is SMALL - MEDIUM 330PHP and LARGE - XL 350PHP, DOUBLE XL 370PHP <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
+                    Reminder black or white same price.
                 </p><br><br>
                 <a class="tshirt omsim" href="#section2">T shirt</a>
                 <a class="desenyo omsim" href="#section1">Lay Outs</a>
@@ -83,10 +83,10 @@
                 </div>
                 <div class="qualification">
                     <div id="infota" class="info"><br>
-                        <h1>What can we do?</h1><br>
-                        <h1>Graphic Design</h1>
-                        <h1>Video Editing</h1>
-                        <h1>Web Design</h1>
+                        <h1>Price 📌</h1><br>
+                        <h1>Small - Medium = 330Php</h1>
+                        <h1>Large - XL = 350Php</h1>
+                        <h1>DOUBLE XL = 370Php</h1>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <td>Return</td>
                 </tr>
                 <tr>
-                    <td>2</td>
+                    <td>3</td>
                     <td>0</td>
                 </tr>
             </table>
@@ -155,9 +155,10 @@
         <div>
             <h1 id="tshirt" class="T shirTE">T-Shirt</h1><br>
             <img id="img66" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
-            <img id="img77" class="img7" src="Genggeng.png" alt="">
+            <img id="img77" class="img7" src="One Piece Luffy.png" alt="">
             <img id="img88" class="img8" src="Glitch.png" alt="">
             <img id="img99" class="img9" src="Etst.png" alt="">
+            <a href="pictures.html"><h1 class="seeemore">See more..</h1></a>
         </div>
     </section>
     <section id="tungkol">
@@ -171,9 +172,8 @@
                 <span>T shirt design, Logo's, Poster</span>, etc... And we decided to start our
                     business on <span>January 19 2023</span>, 2022 palang nag babalak na kame gumawa
                     you can support us to sharing our post, likes.
-                    A side to photo editing you can hire me as your video editor
-                    you can see my edit <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
-                    Reminder ang presyo ng design ay naka depende sa ipapagawa mong design.
+                    for the price is SMALL - MEDIUM 330PHP and LARGE - XL 350PHP, DOUBLE XL 370PHP <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
+                    Reminder black or white same price.
                 </p><br><br>
                 <a class="tshirt omsim shirtt" href="#pangatlo">T shirt</a>
                 <a class="desenyo omsim senyo" href="#second">Lay Outs</a>
