--- a/pictures.html
+++ b/pictures.html
@@ -26,6 +26,7 @@
             <img src="One Piece Nami WHITE.png" alt="">
             <img src="One Piece Luffy.png" alt="">
             <img src="One Piece Luffy WHITE.png" alt="">
+            <img src="Luffy back.png" alt="">
         </div>
     </main>
     <script src="pictures.js"></script>
