--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img id="img6" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
             <img id="img7" class="img7" src="One Piece Luffy.png" alt="">
             <img id="img8" class="img8" src="Glitch.png" alt="">
-            <img id="img9" class="img9" src="Etst.png" alt="">
+            <img id="img9" class="img9" src="Luffy back.png" alt="">
             <a href="pictures.html"><h1 class="seemore">See more..</h1></a>
         </div>
     </section>
