--- a/pictures.html
+++ b/pictures.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T shirts</title>
     <link rel="stylesheet" href="pictures.css">
+    <link rel="stylesheet" href="index.html">
     <link rel="shortcut icon" href="Artboard 1.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
@@ -14,9 +15,6 @@
         <div class="back">
             <a href="index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
         </div>
-        <audio controls autoplay loop>
-            <source src="yt5s.com - Blakdyak good boy (128 kbps).mp3" type="audio/mp3">
-        </audio>
         <div class="imahe">
             <img src="ASTRONAUT NA NATUHOG.png" alt="">
             <img src="Etst v2.png" alt="">
@@ -27,6 +25,7 @@
             <img src="One Piece Luffy.png" alt="">
             <img src="One Piece Luffy WHITE.png" alt="">
             <img src="Luffy back.png" alt="">
+            <img src="Cogeo.png" alt="">
         </div>
     </main>
     <script src="pictures.js"></script>
