--- a/pictures.html
+++ b/pictures.html
@@ -17,13 +17,13 @@
         <div class="imahe">
             <img src="ASTRONAUT NA NATUHOG.png" alt="">
             <img src="Etst v2.png" alt="">
-            <img src="Glitch.png" alt="">
+            <!-- <img src="Glitch.png" alt=""> -->
             <img src="Etst.png" alt="">
-            <img src="One Piece Nami.png" alt="">
-            <img src="One Piece Nami WHITE.png" alt="">
+            <img src="One Piece ZORO.png" alt="">
+            <img src="One Piece ZOROWHITE.png" alt="">
             <img src="One Piece Luffy.png" alt="">
             <img src="One Piece Luffy WHITE.png" alt="">
-            <img src="Luffy back.png" alt="">
+            <!-- <img src="Luffy back.png" alt=""> -->
             <img src="Cogeo.png" alt="">
         </div>
     </main>
