--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h1 id="tshirt" class="T">T-Shirt</h1><br>
             <img id="img6" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
             <img id="img7" class="img7" src="One Piece ZORO.png" alt="">
-            <img id="img8" class="img8" src="Glitch.png" alt="">
+            <img id="img8" class="img8" src="One Piece Luffy.png" alt="">
             <img id="img9" class="img9" src="Cogeo.png" alt="">
             <a href="pictures.html"><h1 class="seemore">See more..</h1></a>
         </div>
@@ -156,7 +156,7 @@
             <h1 id="tshirt" class="T shirTE">T-Shirt</h1><br>
             <img id="img66" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
             <img id="img77" class="img7" src="One Piece ZORO.png" alt="">
-            <img id="img88" class="img8" src="Glitch.png" alt="">
+            <img id="img88" class="img8" src="One Piece Luffy.png" alt="">
             <img id="img99" class="img9" src="Cogeo.png" alt="">
             <a href="pictures.html"><h1 class="seeemore">See more..</h1></a>
         </div>
