--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exclusive Tshirt / HOME</title>
+    <title>HOME | Exclusive</title>
     <link rel="stylesheet" href="tabibee.css">
     <link rel="shortcut icon" href="Artboard 1.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -51,7 +51,7 @@
         <hr class="lined">
         <div>
             <h1 id="tshirt" class="T">T-Shirt</h1><br>
-            <img id="img6" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
+            <img id="img6" class="img6" src="KAISEN.png" alt="">
             <img id="img7" class="img7" src="One Piece ZORO.png" alt="">
             <img id="img8" class="img8" src="One Piece Luffy.png" alt="">
             <img id="img9" class="img9" src="Cogeo.png" alt="">
@@ -107,7 +107,7 @@
                 </tr>
             </table>
         </div>
-        <h1 class="copyright"> ©Tabibee Alvarez Developer All Right Reserved.</h1>
+        <h1 class="copyright"> ©Tabibee Alvarez Development All Right Reserved.</h1>
         <h1 class="you">YOᑌ ᑕᗩᑎ ᖇEᗩᑕᕼ ᗰE OᑌT ᕼEᖇE</h1>
         <a href="https://www.facebook.com/Tabibeegaming"><i class="fa-brands fa-facebook fb"></i></a>
         <a href="https://www.tiktok.com/@tabibeegaming"><i class="fa-brands fa-tiktok tt"></i></a>
@@ -182,7 +182,7 @@
     </section>
     <footer id="paa-foot">
         <img src="Artboard 1.png" alt="">
-        <p>©Tabibee Alvarez Developer All Right Reserved</p>
+        <p>©Tabibee Alvarez Development All Right Reserved</p>
         <a href="https://www.facebook.com/Tabibeegaming"><i class="fa-brands fa-facebook fb"></i></a>
         <a href="https://www.tiktok.com/@tabibeegaming"><i class="fa-brands fa-tiktok tt"></i></a>
         <a href="https://www.youtube.com/channel/UCCevkYd9KxuCAZpktzj6B2g"><i class="fa-brands fa-youtube yt"></i></a>
