--- a/pictures.html
+++ b/pictures.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T shirts</title>
+    <title>T shirts | Exclusive</title>
     <link rel="stylesheet" href="pictures.css">
     <link rel="shortcut icon" href="Artboard 1.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -15,7 +15,7 @@
             <a href="index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
         </div>
         <div class="imahe">
-            <img src="ASTRONAUT NA NATUHOG.png" alt="">
+            <img src="ZUES SHIRT.png" alt="">
             <img src="Etst v2.png" alt="">
             <img src="KAISEN.png" alt="">
             <img src="Etst.png" alt="">
