--- a/pictures.html
+++ b/pictures.html
@@ -16,7 +16,7 @@
         </div>
         <div class="imahe">
             <img src="ZUES SHIRT.png" alt="">
-            <img src="Etst v2.png" alt="">
+            <img src="POSEIDON.png" alt="">
             <img src="KAISEN.png" alt="">
             <img src="Etst.png" alt="">
             <img src="One Piece ZORO.png" alt="">
