--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img id="img6" class="img6" src="KAISEN.png" alt="">
             <img id="img7" class="img7" src="One Piece ZORO.png" alt="">
             <img id="img8" class="img8" src="One Piece Luffy.png" alt="">
-            <img id="img9" class="img9" src="Cogeo.png" alt="">
+            <img id="img9" class="img9" src="ZUES SHIRT.png" alt="">
             <a href="pictures.html"><h1 class="seemore">See more..</h1></a>
         </div>
     </section>
@@ -157,7 +157,7 @@
             <img id="img66" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
             <img id="img77" class="img7" src="One Piece ZORO.png" alt="">
             <img id="img88" class="img8" src="One Piece Luffy.png" alt="">
-            <img id="img99" class="img9" src="Cogeo.png" alt="">
+            <img id="img99" class="img9" src="ZUES SHIRT.png" alt="">
             <a href="pictures.html"><h1 class="seeemore">See more..</h1></a>
         </div>
     </section>
