--- a/pictures.html
+++ b/pictures.html
@@ -16,6 +16,7 @@
         </div>
         <div class="imahe">
             <img src="ZUES SHIRT.png" alt="">
+            <img src="MOOD.png" alt="">
             <img src="POSEIDON.png" alt="">
             <img src="KAISEN.png" alt="">
             <img src="Etst.png" alt="">
